# dynamic-data-masking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docker/: prometheus.yml
frontend/: app.js  index.html  styles.css
migrations/: env.py
migrations/versions/: 0001_initial_document_jobs.py
src/apps/api/: auth.py  dependencies.py  frontend.py  main.py  queue.py
src/apps/api/routes/: __init__.py  detections.py  documents.py  downloads.py  health.py  jobs.py  metrics.py  plans.py  quality.py  texts.py
src/apps/api/schemas/: detections.py  jobs.py  texts.py
src/apps/worker/: __init__.py  celery_app.py  main.py  tasks.py
src/ddm_engine/: __init__.py  config.py
src/ddm_engine/detection/: __init__.py  llm_detector.py  models.py  presidio_detector.py  regex_detector.py  review.py  service.py  text_index.py
src/ddm_engine/extraction/: __init__.py  docx_text.py  models.py  ocr.py  pdf_text.py  plain_text.py  service.py  text_layout.py
src/ddm_engine/llm/: __init__.py  cache.py  client.py  decision_engine.py  prompts.py  router.py  safety.py  schemas.py  validator.py
src/ddm_engine/observability/: __init__.py  context.py  logging.py  metrics.py  middleware.py
src/ddm_engine/planning/: __init__.py  merger.py  models.py  planner.py  service.py
src/ddm_engine/quality/: __init__.py  models.py  service.py  verifier.py
src/ddm_engine/rendering/: __init__.py  layout_pdf.py  pdf_redactor.py
src/ddm_engine/storage/: __init__.py  artifacts.py  database.py  jobs.py  models.py  object_store.py  repositories.py  retention.py
src/dynamic_data_masking/: __init__.py  main.py
src/dynamic_data_masking/api/: routes.py  schemas.py
src/dynamic_data_masking/detectors/: __init__.py
src/dynamic_data_masking/pipeline/: __init__.py
src/dynamic_data_masking/storage/: __init__.py  jobs.py
tests/: test_documents.py  test_health.py
tests/fixtures/: llm_sensitive_cases.json
tests/unit/: test_detection.py  test_llm.py  test_llm_regression_pack.py  test_object_store.py  test_pdf_extraction.py  test_pdf_redactor.py  test_planning.py  test_quality_verifier.py  test_repositories.py  test_worker_tasks.py
